# plugin_loader

./: CMakeLists.txt  README.md  colcon.pkg  dependencies.rosinstall  package.xml
.github/: ubuntu_focal.yml
.github/workflows/: clang_format.yml  ubuntu_focal.yml  windows_2019.yml
cmake/: plugin_loader-config.cmake.in
include/plugin_loader/: macros.h  plugin_loader.h  plugin_loader.hpp  plugin_loader_utils.h
test/: CMakeLists.txt  plugin.cpp  plugin.h  plugin_impl.cpp  utest.cpp
